--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.3",
     "@vueuse/core": "^10.2.1",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
+    "sass": "^1.63.6",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
