feat: add `vue-i18n` to transltate langs

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "roboto-fontface": "*",
     "sass": "^1.63.6",
     "vue": "^3.2.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
