--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
     "sass": "^1.63.6",
+    "tdesign-vue-next": "^1.3.11",
     "vue": "^3.2.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0",
@@ -30,6 +31,8 @@
     "eslint": "^8.0.0",
     "eslint-plugin-vue": "^9.0.0",
     "typescript": "^5.0.0",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-tsc": "^1.2.0"
