--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "@vueuse/core": "^10.2.1",
+    "markdown-it": "^13.0.1",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
     "sass": "^1.63.6",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.15.0",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
