--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "@vueuse/core": "^10.2.1",
+    "axios": "^1.4.0",
     "markdown-it": "^13.0.1",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
