--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@types/nprogress": "^0.2.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "markdown-it": "^13.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
     "sass": "^1.63.6",
