--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/validators": "^2.0.3",
     "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
+    "highlight.js": "^11.8.0",
     "markdown-it": "^13.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
