chore: update docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,11 @@
-.DS_Store
+/dist
+profile.json
 node_modules
-
 
 # local env files
 .env.local
 .env.*.local
 
-# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
