--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,26 @@
+version: '3'
 services:
-  mysql:
+  app:
+    build: ./app/
+    depends_on:
+      - server
+    ports:
+      - '51818:51818'
+
+  server:
+    build: ./server/
+    depends_on:
+      - database
+    ports:
+      - '51717:51717'
+      - "1717:1717"
+    environment:
+      - HTTP_PROXY=http://127.0.0.1:1717
+      - HTTPS_PROXY=http://127.0.0.1:1717
+
+  database:
     build: ./database/
     restart: always
-    environment:
-      MYSQL_DATABASE: 'db'
-      MYSQL_ROOT_PASSWORD: 'root'
     ports:
-      - '52020:52020'
+      - '52020:3306'
+
