--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     build: ./app/
+    command: ["sh", "-c", "sleep 12 && pnpm dev"]
     depends_on:
       - server
     ports:
@@ -9,7 +10,7 @@ services:
 
   server:
     build: ./server/
-    command: ["sh", "-c", "sleep 30 && uvicorn main:app --host 0.0.0.0 --port 51717"]
+    command: ["sh", "-c", "sleep 12 && uvicorn main:app --host 0.0.0.0 --port 51717"]
     depends_on:
       - database
     ports:
