--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
 
   server:
     build: ./server/
-    command: ["sh", "-c", "sleep 15 && uvicorn main:app --host 0.0.0.0 --port 51717"]
+    restart: always
     depends_on:
       - database
     ports:
