--- a/next/package.json
+++ b/next/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-resizable-panels": "^2.0.12",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
