--- a/next/package.json
+++ b/next/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
+    "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
