--- a/next/package.json
+++ b/next/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "next-themes": "^0.2.1",
