--- a/next/package.json
+++ b/next/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@nextui-org/react": "^2.2.10",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -25,6 +24,7 @@
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "markdown-it": "^14.0.0",
+    "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
