--- a/next/package.json
+++ b/next/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.344.0",
     "markdown-it": "^14.0.0",
     "next": "^14.1.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
