--- a/next/package.json
+++ b/next/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@mdi/font": "^7.4.47",
+    "@prisma/client": "^5.11.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -30,6 +31,7 @@
     "markdown-it": "^14.0.0",
     "next": "^14.1.3",
     "next-themes": "^0.3.0",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
