refactor: update folder sturctures

--- a/next/package.json
+++ b/next/package.json
@@ -39,7 +39,8 @@
     "sass": "^1.72.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/markdown-it": "^13.0.7",
