--- a/next/.gitignore
+++ b/next/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 .env
+/public/temp
 
 # dependencies
 /node_modules
