--- a/next/package.json
+++ b/next/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.72.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tiktoken": "^1.0.13",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
