--- a/next/package.json
+++ b/next/package.json
@@ -34,11 +34,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "https-proxy-agent": "^7.0.4",
     "langchain": "^0.1.30",
     "lucide-react": "^0.344.0",
     "markdown-it": "^14.0.0",
     "next": "^14.1.3",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
