feat: update configuration parameters and prompt templates

--- a/next/package.json
+++ b/next/package.json
@@ -31,8 +31,10 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "async-mutex": "^0.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.8",
     "https-proxy-agent": "^7.0.4",
     "langchain": "^0.1.30",
