--- a/next/package.json
+++ b/next/package.json
@@ -52,6 +52,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tiktoken": "^1.0.13",
+    "ws": "^8.16.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
@@ -61,6 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
