feat: refactor code to handle file uploads and note creation

--- a/next/package.json
+++ b/next/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "test": "vitest",
     "postinstall": "prisma generate",
-    "push": "prisma db push",
+    "push": "prisma generate & prisma db push",
     "delete": "node ./delete-all-notes.js"
   },
   "dependencies": {
