--- a/next/package.json
+++ b/next/package.json
@@ -45,6 +45,7 @@
     "markdown-it": "^14.0.0",
     "next": "^14.1.3",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.11",
     "node-fetch": "^3.3.2",
     "prisma": "^5.11.0",
     "react": "^18",
