--- a/next/package.json
+++ b/next/package.json
@@ -73,6 +73,7 @@
     "eslint-config-next": "14.1.2",
     "jsdom": "^24.0.0",
     "postcss": "^8",
+    "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
